# fb

./: .coverage  .env.example  .gitignore  README.md  deploy_to_run_env.sh  requirements.txt
fb-common/: README.md  pyproject.toml
fb-common/fb_common/: __init__.py  env.py  password_policy.py
fb-common/fb_common.egg-info/: PKG-INFO  SOURCES.txt
fb-doc/: architecture.md  design.md  代理商管理系统.md  会员系统设计书.md
fb-miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json  sitemap.json
fb-mobile/: README.md  app.json  package-lock.json  package.json
fb-partner/: .env.example  README.md  config.py  requirements.txt  start_linux.sh  start_mac.sh  stop_linux.sh  stop_mac.sh
fb-pipeline/: .coverage  .env.example  README.md  add_score_to_image.py  calc_car.py  com.fb.run_final.plist  com.fb.run_real.plist  config.py  crawl_final.py  crawl_real.py  evaluation_sync.py  gen_launchd_plist.sh  log_cleanup.py  merge_data.py  plot_car.py  pytest.ini  run_final.py  run_real.py  scraper_real.py
fb-platform/: .coverage  .env.example  README.md  config.py  package-lock.json  pytest.ini  requirements.txt  run.py  start_linux.sh  start_mac.sh  stop_linux.sh  stop_mac.sh
football-betting-common/: README.md  pyproject.toml
football-betting-common/football_betting_common/: __init__.py  env.py  mysql.py
football-betting-common/football_betting_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
football-betting-doc/: architecture.md  design.md  代理商管理系统.md  代理商结算设计.md  会员系统设计书.md
football-betting-miniprogram/: README.md  app.json  (+3 more)
(+244 files in other folders)
